[gd_scene load_steps=33 format=2]

[ext_resource path="res://Resources/Images/Logout_Active.png" type="Texture" id=1]
[ext_resource path="res://Resources/Images/Logout_Inactive.png" type="Texture" id=2]
[ext_resource path="res://Resources/Images/Setting_Inactive.png" type="Texture" id=3]
[ext_resource path="res://Resources/Images/Loadout_Inactive.png" type="Texture" id=4]
[ext_resource path="res://Resources/Images/Start_Inactive.png" type="Texture" id=5]
[ext_resource path="res://Resources/Images/Start_Active.png" type="Texture" id=6]
[ext_resource path="res://Resources/Images/SinglePlayerActive.png" type="Texture" id=7]
[ext_resource path="res://Resources/Images/JoxHeadLogo.png" type="Texture" id=8]
[ext_resource path="res://Resources/Images/SinglePlayerInactive.png" type="Texture" id=9]
[ext_resource path="res://Scenes/MainScenes/MainMenu.gd" type="Script" id=10]
[ext_resource path="res://Resources/Images/BackInactive.png" type="Texture" id=11]
[ext_resource path="res://Resources/Music/Mousehover_soundeffect.wav" type="AudioStream" id=12]
[ext_resource path="res://Resources/Images/BackActive.png" type="Texture" id=13]
[ext_resource path="res://Resources/Images/Boxxy.png" type="Texture" id=14]
[ext_resource path="res://Resources/Images/MultiplayerInactive.png" type="Texture" id=15]
[ext_resource path="res://Resources/Fonts/BleedingPixels.ttf" type="DynamicFontData" id=16]
[ext_resource path="res://Resources/Fonts/REGISTER.TTF" type="DynamicFontData" id=17]
[ext_resource path="res://Resources/Images/Sprite.png" type="Texture" id=18]
[ext_resource path="res://Resources/Images/MultiplayerActive.png" type="Texture" id=19]
[ext_resource path="res://Resources/Images/NextButton.png" type="Texture" id=20]
[ext_resource path="res://Resources/Images/PreviousButton.png" type="Texture" id=21]
[ext_resource path="res://Resources/Images/Setting_Active.png" type="Texture" id=22]
[ext_resource path="res://Resources/Images/Loadout_Active.png" type="Texture" id=23]

[sub_resource type="DynamicFont" id=1]
size = 25
font_data = ExtResource( 16 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.894118, 0.894118, 0.894118, 1 )

[sub_resource type="DynamicFont" id=3]
size = 21
font_data = ExtResource( 17 )

[sub_resource type="DynamicFont" id=4]
size = 18
font_data = ExtResource( 17 )

[sub_resource type="DynamicFont" id=5]
size = 18
font_data = ExtResource( 17 )

[sub_resource type="StyleBoxFlat" id=6]

[sub_resource type="DynamicFont" id=7]
size = 45
font_data = ExtResource( 17 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 1, 0.972549, 0.972549, 1 )

[sub_resource type="DynamicFont" id=9]
size = 30
font_data = ExtResource( 17 )

[node name="MainMenu" type="Node2D"]
script = ExtResource( 10 )
__meta__ = {
"_edit_horizontal_guides_": [  ]
}

[node name="Panel" type="Panel" parent="."]
margin_left = -32.4126
margin_right = 1404.59
margin_bottom = 768.0
rect_min_size = Vector2( 1368, 768 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="LogoRect" type="TextureRect" parent="."]
margin_left = 280.0
margin_top = 45.0
margin_right = 1042.0
margin_bottom = 152.0
texture = ExtResource( 8 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Test" type="Button" parent="."]
margin_left = 246.818
margin_top = 42.6731
margin_right = 407.821
margin_bottom = 62.6731
text = "feafaefaefaefaefea"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UsernameLabel" type="Label" parent="."]
margin_left = 1024.81
margin_top = 172.03
margin_right = 1238.81
margin_bottom = 198.03
custom_fonts/font = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainLobby" type="Node2D" parent="."]

[node name="MainContainer" type="MarginContainer" parent="MainLobby"]
margin_left = 345.0
margin_top = 225.335
margin_right = 967.0
margin_bottom = 590.335
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MainLobby/MainContainer"]
margin_right = 622.0
margin_bottom = 366.0
custom_constants/separation = 50
alignment = 1
__meta__ = {
"_edit_lock_": true
}

[node name="StartButton" type="TextureButton" parent="MainLobby/MainContainer/VBoxContainer"]
margin_right = 134.0
margin_bottom = 54.0
size_flags_horizontal = 0
size_flags_vertical = 0
texture_normal = ExtResource( 5 )
texture_hover = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoadoutButton" type="TextureButton" parent="MainLobby/MainContainer/VBoxContainer"]
margin_top = 104.0
margin_right = 210.0
margin_bottom = 158.0
size_flags_horizontal = 0
texture_normal = ExtResource( 4 )
texture_hover = ExtResource( 23 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingButton" type="TextureButton" parent="MainLobby/MainContainer/VBoxContainer"]
margin_top = 208.0
margin_right = 622.0
margin_bottom = 262.0
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 22 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitButton" type="TextureButton" parent="MainLobby/MainContainer/VBoxContainer"]
margin_top = 312.0
margin_right = 622.0
margin_bottom = 366.0
texture_normal = ExtResource( 2 )
texture_hover = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ModeSelection" type="Node2D" parent="."]
visible = false

[node name="SingleplayerButton" type="TextureButton" parent="ModeSelection"]
margin_left = 282.384
margin_top = 359.825
margin_right = 612.384
margin_bottom = 413.825
texture_normal = ExtResource( 9 )
texture_hover = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MultiplayerButton" type="TextureButton" parent="ModeSelection"]
margin_left = 747.841
margin_top = 361.821
margin_right = 1018.84
margin_bottom = 415.821
texture_normal = ExtResource( 15 )
texture_hover = ExtResource( 19 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="msBackButton" type="TextureButton" parent="ModeSelection"]
margin_left = 600.0
margin_top = 630.0
margin_right = 715.456
margin_bottom = 690.0
texture_normal = ExtResource( 11 )
texture_hover = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SinglePlayerLobby" type="Node2D" parent="."]
visible = false

[node name="sp_BackButton" type="TextureButton" parent="SinglePlayerLobby"]
margin_left = 600.0
margin_top = 630.0
margin_right = 714.0
margin_bottom = 684.0
texture_normal = ExtResource( 11 )
texture_hover = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackgroundPanel" type="Panel" parent="SinglePlayerLobby"]
margin_left = 465.456
margin_top = 239.227
margin_right = 865.456
margin_bottom = 488.227
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartMapButton" type="TextureButton" parent="SinglePlayerLobby/BackgroundPanel"]
margin_left = 17.0
margin_top = 17.0
margin_right = 2067.0
margin_bottom = 1219.0
rect_scale = Vector2( 0.18, 0.18 )
texture_normal = ExtResource( 14 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Textholder" type="Label" parent="SinglePlayerLobby"]
margin_left = 485.776
margin_top = 501.898
margin_right = 850.776
margin_bottom = 524.898
custom_fonts/font = SubResource( 3 )
text = "CLICK TO PLAY LEVEL"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="SinglePlayerLobby"]
anchor_right = 1.0
margin_left = 557.731
margin_top = 206.362
margin_right = 681.731
margin_bottom = 225.362
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="SinglePlayerLobby/VBoxContainer"]
margin_right = 124.0
margin_bottom = 19.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="HSTextLabel" type="Label" parent="SinglePlayerLobby/VBoxContainer/HBoxContainer"]
margin_right = 120.0
margin_bottom = 19.0
custom_fonts/font = SubResource( 4 )
text = "Highscore:"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="HSValueLabel" type="Label" parent="SinglePlayerLobby/VBoxContainer/HBoxContainer"]
margin_left = 124.0
margin_right = 124.0
margin_bottom = 19.0
custom_fonts/font = SubResource( 5 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Inventory" type="Node2D" parent="."]
visible = false

[node name="Background" type="Panel" parent="Inventory"]
margin_left = 245.51
margin_top = 208.0
margin_right = 645.51
margin_bottom = 608.0
custom_styles/panel = SubResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftButton" type="TextureButton" parent="Inventory/Background"]
margin_left = 26.0
margin_top = 340.0
margin_right = 76.0
margin_bottom = 390.0
texture_normal = ExtResource( 21 )
__meta__ = {
"_edit_lock_": true
}

[node name="Item_Label" type="Label" parent="Inventory/Background"]
margin_left = 69.2866
margin_top = 341.524
margin_right = 332.287
margin_bottom = 387.524
custom_fonts/font = SubResource( 7 )
align = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="RightButton" type="TextureButton" parent="Inventory/Background"]
margin_left = 325.0
margin_top = 340.0
margin_right = 375.0
margin_bottom = 390.0
texture_normal = ExtResource( 20 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Character_Sprite" type="Sprite" parent="Inventory/Background"]
position = Vector2( 171.401, 182.19 )
texture = ExtResource( 18 )
region_enabled = true
region_rect = Rect2( 84.9474, 3.4263, 236.011, 193.906 )
__meta__ = {
"_edit_lock_": true
}

[node name="Weapon_Sprite" type="Sprite" parent="Inventory/Background/Character_Sprite"]
position = Vector2( 76.1953, 17.4614 )
region_rect = Rect2( 87, 342.482, 257, 52 )
__meta__ = {
"_edit_lock_": true
}

[node name="StatsPanel" type="Panel" parent="Inventory"]
margin_left = 731.031
margin_top = 219.098
margin_right = 1023.04
margin_bottom = 597.098
custom_styles/panel = SubResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StatsLabel" type="Label" parent="Inventory/StatsPanel"]
modulate = Color( 0, 0, 0, 1 )
margin_right = 296.0
margin_bottom = 31.0
custom_fonts/font = SubResource( 9 )
text = "Stats"
align = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="WpnDamageLabel" type="Label" parent="Inventory/StatsPanel"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 16.0
margin_top = 61.0
margin_right = 156.0
margin_bottom = 92.0
custom_fonts/font = SubResource( 9 )
text = "Damage:"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="WpnDamageValue" type="Label" parent="Inventory/StatsPanel"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 170.0
margin_top = 64.0
margin_right = 194.0
margin_bottom = 95.0
custom_fonts/font = SubResource( 9 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="WpnRangeLabel" type="Label" parent="Inventory/StatsPanel"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 15.0
margin_top = 108.0
margin_right = 135.0
margin_bottom = 139.0
custom_fonts/font = SubResource( 9 )
text = "Range :"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="WpnRangeValue" type="Label" parent="Inventory/StatsPanel"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 170.0
margin_top = 106.0
margin_right = 195.0
margin_bottom = 137.0
custom_fonts/font = SubResource( 9 )
__meta__ = {
"_edit_lock_": true
}

[node name="WpnAmmoLabel" type="Label" parent="Inventory/StatsPanel"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 15.0
margin_top = 156.0
margin_right = 122.0
margin_bottom = 187.0
custom_fonts/font = SubResource( 9 )
text = "Ammo  :"
__meta__ = {
"_edit_lock_": true
}

[node name="WpnAmmoValue" type="Label" parent="Inventory/StatsPanel"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 170.0
margin_top = 158.0
margin_right = 196.0
margin_bottom = 189.0
custom_fonts/font = SubResource( 9 )
__meta__ = {
"_edit_lock_": true
}

[node name="BackButton" type="TextureButton" parent="Inventory"]
margin_left = 600.0
margin_top = 630.0
margin_right = 714.0
margin_bottom = 684.0
texture_normal = ExtResource( 11 )
texture_hover = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MouseHover" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
pitch_scale = 2.0

[connection signal="pressed" from="Test" to="." method="_on_Test_pressed"]
[connection signal="mouse_entered" from="MainLobby/MainContainer/VBoxContainer/StartButton" to="." method="_on_StartButton_mouse_entered"]
[connection signal="pressed" from="MainLobby/MainContainer/VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="mouse_entered" from="MainLobby/MainContainer/VBoxContainer/LoadoutButton" to="." method="_on_LoadoutButton_mouse_entered"]
[connection signal="pressed" from="MainLobby/MainContainer/VBoxContainer/LoadoutButton" to="." method="_on_LoadoutButton_pressed"]
[connection signal="mouse_entered" from="MainLobby/MainContainer/VBoxContainer/SettingButton" to="." method="_on_SettingButton_mouse_entered"]
[connection signal="pressed" from="MainLobby/MainContainer/VBoxContainer/SettingButton" to="." method="_on_SettingButton_pressed"]
[connection signal="mouse_entered" from="MainLobby/MainContainer/VBoxContainer/ExitButton" to="." method="_on_ExitButton_mouse_entered"]
[connection signal="pressed" from="MainLobby/MainContainer/VBoxContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="pressed" from="ModeSelection/SingleplayerButton" to="." method="_on_SingleplayerButton_pressed"]
[connection signal="pressed" from="ModeSelection/MultiplayerButton" to="." method="_on_MultiplayerButton_pressed"]
[connection signal="pressed" from="ModeSelection/msBackButton" to="." method="_on_msBackButton_pressed"]
[connection signal="mouse_entered" from="SinglePlayerLobby/sp_BackButton" to="." method="_on_sp_BackButton_mouse_entered"]
[connection signal="pressed" from="SinglePlayerLobby/sp_BackButton" to="." method="_on_sp_BackButton_pressed"]
[connection signal="mouse_entered" from="SinglePlayerLobby/BackgroundPanel/StartMapButton" to="." method="_on_StartMapButton_mouse_entered"]
[connection signal="mouse_exited" from="SinglePlayerLobby/BackgroundPanel/StartMapButton" to="." method="_on_StartMapButton_mouse_exited"]
[connection signal="pressed" from="SinglePlayerLobby/BackgroundPanel/StartMapButton" to="." method="_on_StartMapButton_pressed"]
[connection signal="mouse_entered" from="Inventory/Background/LeftButton" to="." method="_on_LeftButton_mouse_entered"]
[connection signal="pressed" from="Inventory/Background/LeftButton" to="." method="_on_LeftButton_pressed"]
[connection signal="mouse_entered" from="Inventory/Background/RightButton" to="." method="_on_RightButton_mouse_entered"]
[connection signal="pressed" from="Inventory/Background/RightButton" to="." method="_on_RightButton_pressed"]
[connection signal="mouse_entered" from="Inventory/BackButton" to="." method="_on_ExitButton_mouse_entered"]
[connection signal="pressed" from="Inventory/BackButton" to="." method="_on_BackButton_pressed"]
